Fixed spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,11 +1,13 @@
 @import "@/assets/css/theme.scss";
-
+ 
 :root {
     background-color: $color-background;
     color: $color-text-primary;
     font-family: "Anodina", sans-serif;
     font-weight: 800;
     font-size: 14px;
+    --spacing-init: 100px;
+    --spacing: var(--spacing-init);
 }
 
 ::selection {
@@ -30,4 +32,17 @@
 .page-enter-to,
 .page-leave-to {
     //transform: translateY(-100vh);
+}
+
+
+@media (max-width: $breakpoint-laptop) {
+    :root {
+        --spacing: calc(var(--spacing-init) * 0.7);
+    }
+}
+
+@media (max-width: $breakpoint-mobile) {
+    :root {
+        --spacing: calc(var(--spacing-init) * 0.5);
+    }
 }
