--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -13,13 +13,3 @@ $breakpoint-mobile: 500px;
 
 $timing-primary: cubic-bezier(0, 1, 0.18, 1);
 $timing-text: cubic-bezier(0.25, 1, 0.5, 1);
-
-$spacing: 10px; 
-
-@media (max-width: $breakpoint-laptop) {
-    $spacing: 7px;
-}
-
-@media (max-width: $breakpoint-mobile) {
-    $spacing: 5px;
-}
